fiksa pos på slott

--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -13,8 +13,9 @@
 
         <!-- Stairs -->
         <div class="stairsContainer">
-            <img class="stairs" src="/images/Lego-Land/gray-lego-board.png" alt="stairs"/>
+            <img class="stairs" src="/images/Lego-Land/gray-lego-board.png" alt="grayBoard"/>
         </div>
+
 
         <!-- Snow -->
         <div class="snowContainer">
@@ -62,19 +63,10 @@
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
         </div>
 
         <!-- Bottom windows -->
         <div class="windowContainerBottom">
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
-            <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
             <img class="window" src="/images/Lego-Land/beige-lego-window.png" alt="legoWindow"/>
@@ -97,12 +89,15 @@
             <img class="castle" src="/images/Lego-Land/beigeLegoBoard.png" alt="beigeLegoBoard"/>
         </div>
 
-        <!-- Castle door -->
+        <!-- Castle door-->
         <div class="doorContainer">
-            <img class="merryXmas" src="/images/Lego-Land/merryXmasBubble.png"/>
             <img class="door" src="/images/Lego-Land/door3.png"/>
             <img class="door" id="door2" src="/images/Lego-Land/door3.png"/>
         </div>
+
+        <!-- Merry xmas speechbubble-->
+        <img class="merryXmas" src="/images/Lego-Land/merryXmasBubble.png"/>
+
         
         <!-- Trees -->
         <div class="treeContainer">
@@ -128,6 +123,13 @@
             <img class="present" id="present2" src="/images/North-Pole/present2.png" alt="present1"/>
             <img class="present" id="present3" src="/images/North-Pole/present3.png" alt="present1"/>
         </div>
+
+        <!-- Bush -->
+        <div class="bushContainer">
+            <img class="bush" id="bush1" src="/images/Lego-Land/lego-bush.png" alt="Bush"/>
+            <img class="bush" id="bush2" src="/images/Lego-Land/lego-bush.png" alt="Bush"/>
+        </div>
+
 
     </div>   
 </body>
