--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -16,7 +16,7 @@
         <div class="shimmer"></div>
     </section>
 
-    <img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh">
+    <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh"></a>
 
     <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="" id="sleigh"></a>
     <div class="normalFrame frame">
