--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Its all Lego!</title>
     <link rel="stylesheet" href="/CSS/Felles.css">
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
@@ -16,7 +16,7 @@
         <div class="shimmer"></div>
     </section>
 
-    <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh"></a>
+    <img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh">
 
     <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="" id="sleigh"></a>
     <div class="normalFrame frame">
