--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oslo</title>
+    <title>Lego Land</title>
     <link rel="stylesheet" href="/CSS/Felles.css">
     <link rel="stylesheet" href="/css/Lego-Land.css"/>
 </head>
