endra kommenterana til tab in

--- a/HTML/Lego-Land.html
+++ b/HTML/Lego-Land.html
@@ -119,7 +119,7 @@
         </div>
 
         <!-- Presents -->
-        <div class="presentShowBtn">Hover 
+        <div class="presentShowBtn"> 
             <img class="present" id="present1" src="/images/North-Pole/present1.png" alt="present1"/>
             <img class="present" id="present2" src="/images/North-Pole/present2.png" alt="present1"/>
             <img class="present" id="present3" src="/images/North-Pole/present3.png" alt="present1"/>
@@ -137,7 +137,7 @@
         </div>
         
         <!-- Sign link -->
-        <a class="link" href="/html/Nor th-Pole.html">Nordpolen</a>
+        <a class="link" href="/html/North-Pole.html">Nordpolen</a>
 
 
     </div>   
