--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -36,18 +36,22 @@
         <!--Forest-->
         <div>
             <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1" id="relTree1">
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2" id="relTree2">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3" id="relTree3">    
+            <div class="tree2div">
+                <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2" id="relTree2">
+                <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2" id="legoTree2">
+            </div>
+            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3" id="relTree3">
             <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4" id="relTree4">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5" id="relTree5">
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6" id="relTree6">
+            <div class="tree5div">
+                <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5" id="legoTree5">
+                <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5" id="relTree5">
+            </div>
         </div>
-
-    </div>
-
+        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6" id="relTree6">
 
 
-    <div class="legoFrame frame">
+
+
 
         <!--Sky-->
         <div>
@@ -67,7 +71,6 @@
             <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2" id="legoTree2">
             <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3" id="legoTree3">
             <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4" id="legoTree4">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5" id="legoTree5">
             <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6" id="legoTree6">
         </div>
 
