--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -5,74 +5,87 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Its all Lego!</title>
+    <title>Document</title>
     <link rel="stylesheet" href="/CSS/Felles.css">
     <link rel="stylesheet" href="/css/Startside.css">
 </head>
 
 <body>
-    <section>
-        <div class="stars"></div>
-        <div class="shimmer"></div>
-    </section>
-
-    <img src="/IMAGES/North-Pole/sleigh.png" alt="" id="santaSleigh">
-
-    <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="" id="sleigh"></a>
-    <div class="normalFrame frame">
-
+    <div class="frame">
         <!--Sky-->
-        <section>
-            <img src="/IMAGES/startside/relMoon.png" alt="" class="moon" id="relMoon">
-        </section>
+        <div class="sky">
+            <section>
+                <div class="stars"></div>
+                <div class="shimmer"></div>
+            </section>
+            <!--Moon-->
+            <section>
+                <img src="/IMAGES/startside/relMoon.png" alt="Picture of the moon" class="moon" id="relMoon">
+                <img src="/IMAGES/Wallpaper/moon.png" alt="Picture of the moon in Lego" class="moon" id="legoMoon">
+            </section>
+            <section>
+                <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="Smal sleigh of santa" id="santaSleigh"></a>
+            </section>
+        </div>
 
         <!--Image center-->
-        <div>
-            <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground" id="relGround">
-            <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree" id="relBigCenterTree">
-            <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road" id="relRoad">
+        <div class="center">
+            <!--Ground-->
+            <section>
+                <img src="/IMAGES/startside/ground.png" alt="Ground of snow in lego" class="ground" id="relGround">
+                <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground" id="legoGround">
+            </section>
+
+            <!--Road-->
+
+            <section>
+                <img src="/IMAGES/startside/bigGroundRel.png" alt="Road of lego" class="road" id="relRoad">
+                <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road" id="legoRoad">
+            </section>
+
+            <!--Big center tree-->
+            <section>
+                <img src="/IMAGES/startside//relBigTree.png" alt="Big three" class="bigCenterTree"
+                    id="relBigCenterTree">
+                <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree" id="legoBigCenterTree">
+            </section>
         </div>
 
         <!--Forest-->
-        <div>
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree bigTree tree1" id="relTree1">
+        <div class="forest">
+            <div class="tree1div">
+                <img src="/IMAGES/startside/RelPine1.png" alt="Smal pine tree" class="tree bigTree tree1" id="relTree1">
+                <img src="/IMAGES/startside/tree1.png" alt="Smal lego pine tree" class="tree bigTree tree1" id="legoTree1">
+            </div>
             <div class="tree2div">
-                <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree2" id="relTree2">
-                <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2" id="legoTree2">
+                <img src="/IMAGES/startside/RelPine1.png" alt="Smal pine tree" class="tree smalTree tree2" id="relTree2">
+                <img src="/IMAGES/startside/tree1.png" alt="Smal lego pine tree" class="tree smalTree tree2" id="legoTree2">
             </div>
-            <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree3" id="relTree3">
-            <img src="/IMAGES/startside/RelPine1.png" alt="" class="tree smalTree tree4" id="relTree4">
+            <div class="tree3div">
+                <img src="/IMAGES/startside/RelPine2.png" alt="Big pine tree" class="tree bigTree tree3" id="relTree3">
+                <img src="/IMAGES/startside/tree2.png" alt="Big lego pine tree" class="tree bigTree tree3" id="legoTree3">
+            </div>
+            <div class="tree4div">
+                <img src="/IMAGES/startside/RelPine1.png" alt="Smal pine tree" class="tree smalTree tree4" id="relTree4">
+                <img src="/IMAGES/startside/tree1.png" alt="Smal lego pine tree" class="tree smalTree tree4" id="legoTree4">
+            </div>
             <div class="tree5div">
-                <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree5" id="legoTree5">
-                <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree5" id="relTree5">
+                <img src="/IMAGES/startside/tree2.png" alt="Big pine tree" class="tree bigTree tree5" id="legoTree5">
+                <img src="/IMAGES/startside/RelPine2.png" alt="Big lego pine tree" class="tree bigTree tree5" id="relTree5">
             </div>
-        </div>
-        <img src="/IMAGES/startside/RelPine2.png" alt="" class="tree bigTree tree6" id="relTree6">
+            <div class="tree6div">
+                <img src="/IMAGES/startside/RelPine2.png" alt="Big pine tree" class="tree bigTree tree6" id="relTree6">
+                <img src="/IMAGES/startside/tree2.png" alt="Big lego pine tree" class="tree bigTree tree6" id="legoTree6">
+            </div>
+            <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="Santas sleigh" id="sleigh"></a>
 
-
-
-
-
-        <!--Sky-->
-        <div>
-            <img src="/IMAGES/Wallpaper/moon.png" alt="" class="moon" id="legoMoon">
         </div>
 
-        <!--Image center-->
-        <img src="/IMAGES/startside/groundLego.png" alt="Ground of snow in lego" class="ground" id="legoGround">
-        <div>
-            <img src="/IMAGES/startside/big-three.png" alt="Big three" class="bigCenterTree" id="legoBigCenterTree">
-            <img src="/IMAGES/startside/big-ground-lego.png" alt="Road of lego" class="road" id="legoRoad">
-        </div>
 
-        <!--Forest-->
-        <div>
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree bigTree tree1" id="legoTree1">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree2" id="legoTree2">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree3" id="legoTree3">
-            <img src="/IMAGES/startside/tree1.png" alt="" class="tree smalTree tree4" id="legoTree4">
-            <img src="/IMAGES/startside/tree2.png" alt="" class="tree bigTree tree6" id="legoTree6">
-        </div>
+
+
+
+    </div>
 
 </body>
 
