--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -23,6 +23,7 @@
                 <img src="/IMAGES/startside/relMoon.png" alt="Picture of the moon" class="moon" id="relMoon">
                 <img src="/IMAGES/Wallpaper/moon.png" alt="Picture of the moon in Lego" class="moon" id="legoMoon">
             </section>
+            <!--Santas sleigh-->
             <section>
                 <a href="Globe.html"><img src="/IMAGES/North-Pole/sleigh.png" alt="Smal sleigh of santa" id="santaSleigh"></a>
             </section>
@@ -52,28 +53,28 @@
         </div>
 
         <!--Forest-->
-        <div class="forest">
+        <div class="forest bigTree">
             <div class="tree1div">
                 <img src="/IMAGES/startside/RelPine1.png" alt="Smal pine tree" class="tree bigTree tree1" id="relTree1">
                 <img src="/IMAGES/startside/tree1.png" alt="Smal lego pine tree" class="tree bigTree tree1" id="legoTree1">
             </div>
-            <div class="tree2div">
+            <div class="tree2div smalTree">
                 <img src="/IMAGES/startside/RelPine1.png" alt="Smal pine tree" class="tree smalTree tree2" id="relTree2">
                 <img src="/IMAGES/startside/tree1.png" alt="Smal lego pine tree" class="tree smalTree tree2" id="legoTree2">
             </div>
-            <div class="tree3div">
+            <div class="tree3div bigTree">
                 <img src="/IMAGES/startside/RelPine2.png" alt="Big pine tree" class="tree bigTree tree3" id="relTree3">
                 <img src="/IMAGES/startside/tree2.png" alt="Big lego pine tree" class="tree bigTree tree3" id="legoTree3">
             </div>
-            <div class="tree4div">
+            <div class="tree4div smalTree">
                 <img src="/IMAGES/startside/RelPine1.png" alt="Smal pine tree" class="tree smalTree tree4" id="relTree4">
                 <img src="/IMAGES/startside/tree1.png" alt="Smal lego pine tree" class="tree smalTree tree4" id="legoTree4">
             </div>
-            <div class="tree5div">
+            <div class="tree5div bigTree">
                 <img src="/IMAGES/startside/tree2.png" alt="Big pine tree" class="tree bigTree tree5" id="legoTree5">
                 <img src="/IMAGES/startside/RelPine2.png" alt="Big lego pine tree" class="tree bigTree tree5" id="relTree5">
             </div>
-            <div class="tree6div">
+            <div class="tree6div bigTree">
                 <img src="/IMAGES/startside/RelPine2.png" alt="Big pine tree" class="tree bigTree tree6" id="relTree6">
                 <img src="/IMAGES/startside/tree2.png" alt="Big lego pine tree" class="tree bigTree tree6" id="legoTree6">
             </div>
