--- a/HTML/rydd.html
+++ b/HTML/rydd.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Its all Lego!</title>
     <link rel="stylesheet" href="/CSS/Felles.css">
-    <link rel="stylesheet" href="/css/Startside.css">
+    <link rel="stylesheet" href="/css/rydd.css">
 </head>
 
 <body>
