--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/CSS/Felles.css">
-    <link rel="stylesheet" href="/css/Startside.css">
+    <link rel="stylesheet" href="/css/Lego-Start.css">
 </head>
 
 <body>
@@ -71,8 +71,8 @@
                 <img src="/IMAGES/startside/tree1.png" alt="Smal lego pine tree" class="tree smalTree tree4" id="legoTree4">
             </div>
             <div class="tree5div bigTree">
-                <img src="/IMAGES/startside/tree2.png" alt="Big pine tree" class="tree bigTree tree5" id="legoTree5">
                 <img src="/IMAGES/startside/RelPine2.png" alt="Big lego pine tree" class="tree bigTree tree5" id="relTree5">
+                <img src="/IMAGES/startside/tree2.png" alt="Big pine tree" class="tree bigTree tree5" id="legoTree5">
             </div>
             <div class="tree6div bigTree">
                 <img src="/IMAGES/startside/RelPine2.png" alt="Big pine tree" class="tree bigTree tree6" id="relTree6">
