--- a/HTML/Lego-start.html
+++ b/HTML/Lego-start.html
@@ -17,11 +17,13 @@
             <section>
                 <div class="stars"></div>
                 <div class="shimmer"></div>
+                
             </section>
             <!--Moon-->
             <section>
                 <img src="/IMAGES/startside/relMoon.png" alt="Picture of the moon" class="moon" id="relMoon">
                 <img src="/IMAGES/Wallpaper/moon.png" alt="Picture of the moon in Lego" class="moon" id="legoMoon">
+                <img src="/IMAGES/Wallpaper/moon.png" alt="Picture of the moon in Lego" class="moon" id="legoMoonBob">                
             </section>
             <!--Santas sleigh-->
             <section>
