--- a/html/Startside.html
+++ b/html/Startside.html
@@ -14,6 +14,108 @@
         <section>
             <div class="stars"></div>
             <div class="shimmer"></div>
+
+            <img id="flake1" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake2" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake3" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake4" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake5" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake6" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake7" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake8" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake9" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake10" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake11" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake12" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake13" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake14" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake15" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake16" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake17" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake18" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake19" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake20" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">    
+            <img id="flake21" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake22" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake23" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake24" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake25" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake26" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake27" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake28" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake29" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake30" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake31" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake32" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake33" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake34" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake35" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake36" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake37" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake38" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake39" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake40" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake41" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake42" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake43" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake44" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake45" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake46" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake47" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake48" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake49" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake50" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake51" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake52" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake53" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake54" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake55" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake56" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake57" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake58" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake59" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake60" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake61" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake62" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake63" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake64" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake65" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake66" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake67" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake68" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake69" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake70" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake71" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake72" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake73" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake74" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake75" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake76" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake77" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake78" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake79" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake80" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake81" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake82" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake83" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake84" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake85" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake86" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake87"  class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake88"  class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake89"  class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake90" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake91" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake92" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake93" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake94" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake95" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake96" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake97" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake98" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake99" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+            <img id="flake100" class="snow" src="/images//North-Pole/legoSnowflake.png" alt="snowflake">
+
         </section>
         <div class="frame">
             <!--Sky-->
