added loopback to startside

--- a/html/Globe.html
+++ b/html/Globe.html
@@ -53,7 +53,8 @@
 
             <!--Space Cow-->
             <img id="spaceCow" src="/IMAGES/Globe/lego-cow.png" alt="Lego Cow"/>
-            <img id="mushroomCloud" src="/IMAGES/Globe/lego-mushroomcloud.png" alt="Mushroom Cloud">
+            <a id="mushroomCloud" href="/HTML/Startside.html"> <img src="/IMAGES/Globe/lego-mushroomcloud.png" alt="Mushroom Cloud"/> </a>
+                
         </section>
 
         </body>
